[package]
name = "provisionr"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = { version = "0.8.7", features = ["multipart"] }
tokio = { version = "1.48.0", features = ["full"] }
axum-server = "0.8.0"
ctrlc = "3.5.1"
tokio-util = "0.7.17"
once_cell = "1.21.3"
async-trait = "0.1.89"
log = "0.4.28"
env_logger = "0.11.8"
serde = { version = "1.0.228", features = ["derive"] }
rust-embed = "8.9.0"
mime_guess = "2.0.5"
yaml-rust2 = "0.11.0"
minijinja = "2.14.0"
rand = "0.9.2"
rusqlite = { version = "0.38.0", features = ["bundled"] }
utoipa = { version = "5.4.0", features = ["axum_extras"] }
utoipa-swagger-ui = { version = "9.0.2", features = ["axum"] }
thiserror = "2.0.17"
clap = { version = "4.5.53", features = ["derive"] }
sha-crypt = "0.5.0"
yescrypt = "0.1.0-rc.1"
dashmap = "6.1.0"
serde_yaml = "0.9.34"

[dev-dependencies]
ctor = "0.6.3"
mockall = "0.14.0"
quickcheck = "1.0.3"
quickcheck_macros = "1.1.0"
reqwest = { version = "0.13.1", features = ["json", "multipart"] }
serde_json = "1.0.147"
